--- a/EhodVenteEnLigne/Resources/Views/Shared/Components/CartSummary/Default.wo.resx
+++ b/EhodVenteEnLigne/Resources/Views/Shared/Components/CartSummary/Default.wo.resx
@@ -117,25 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MissingName" xml:space="preserve">
-    <value>dougeuleul seu tourr</value>
-  </data>
-  <data name="MissingPrice" xml:space="preserve">
-    <value>dougeuleul loumouy diar</value>
-  </data>
-  <data name="MissingStock" xml:space="preserve">
-    <value>dougeuleul foumou nek</value>
-  </data>
-  <data name="PriceNotANumber" xml:space="preserve">
-    <value>ligeu dougeul dou siffre</value>
-  </data>
-  <data name="PriceNotGreaterThanZero" xml:space="preserve">
-    <value>ligeu dougeul da wara eup neen</value>
-  </data>
-  <data name="StockNotAnInteger" xml:space="preserve">
-    <value>ligeu dougeul bakhoul</value>
-  </data>
-  <data name="StockNotGreaterThanZero" xml:space="preserve">
-    <value> foumou wara nek da wara eup sero</value>
+  <data name="YourCart" xml:space="preserve">
+    <value>seu ndougou</value>
   </data>
 </root>
