--- a/EhodVenteEnLigne/Resources/Views/Product/Index.wo.resx
+++ b/EhodVenteEnLigne/Resources/Views/Product/Index.wo.resx
@@ -117,25 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="MissingName" xml:space="preserve">
-    <value>dougeuleul seu tourr</value>
+  <data name="AddToCart" xml:space="preserve">
+    <value>yok seu dougou</value>
   </data>
-  <data name="MissingPrice" xml:space="preserve">
-    <value>dougeuleul loumouy diar</value>
+  <data name="Description" xml:space="preserve">
+    <value>firndei</value>
   </data>
-  <data name="MissingStock" xml:space="preserve">
-    <value>dougeuleul foumou nek</value>
+  <data name="Name" xml:space="preserve">
+    <value>tourr</value>
   </data>
-  <data name="PriceNotANumber" xml:space="preserve">
-    <value>ligeu dougeul dou siffre</value>
+  <data name="Price" xml:space="preserve">
+    <value>loumouy diar</value>
   </data>
-  <data name="PriceNotGreaterThanZero" xml:space="preserve">
-    <value>ligeu dougeul da wara eup neen</value>
+  <data name="ProductList" xml:space="preserve">
+    <value>Ndjay bi yeup</value>
   </data>
-  <data name="StockNotAnInteger" xml:space="preserve">
-    <value>ligeu dougeul bakhoul</value>
-  </data>
-  <data name="StockNotGreaterThanZero" xml:space="preserve">
-    <value> foumou wara nek da wara eup sero</value>
+  <data name="Stock" xml:space="preserve">
+    <value>tollou way jay bi</value>
   </data>
 </root>
