Module test terminé + fin du projet

--- a/EhodVenteEnLigne/Resources/Models/Order.wo.resx
+++ b/EhodVenteEnLigne/Resources/Models/Order.wo.resx
@@ -124,7 +124,7 @@
     <value>dougeulatal fi guay yewo</value>
   </data>
   <data name="ErrorMissingCountry" xml:space="preserve">
-    <value>dougeulatal seu pays</value>
+    <value>dougeulatal seu rew</value>
   </data>
   <data name="ErrorMissingName" xml:space="preserve">
     <value>dougeulatal seu tour</value>
